--- a/ka-chat-bot/env.example
+++ b/ka-chat-bot/env.example
@@ -4,6 +4,7 @@
 # Databricks Configuration
 DATABRICKS_HOST=your-domain.cloud.databricks.com
 LOCAL_API_TOKEN=your_personal_access_token_here
+MLFLOW_EXPERIMENT_ID=your-mlflow-experiment-id
 
 # Knowledge Assistant Configuration
 SERVING_ENDPOINT_NAME=ka-123-endpoint
