--- a/ka-chat-bot/pyproject.toml
+++ b/ka-chat-bot/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "langgraph-checkpoint-postgres==2.0.23",
     "psycopg==3.2.9",
     "psycopg-binary==3.2.9",
+    "psycopg2-binary==2.9.10",
     "psycopg-pool==3.2.6",
     "unitycatalog-langchain==0.2.0",
     "langchain>=0.3.27",
